--- a/AppAgularTest/AppAgularTest.csproj
+++ b/AppAgularTest/AppAgularTest.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
@@ -36,6 +37,7 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\app\components\" />
+    <Folder Include="ClientApp\src\app\guards\" />
   </ItemGroup>
 
   <ItemGroup>
